WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20954
When viewing a gif in a recent nightly, the gif is not animated smoothly and webkit uses a lot of CPU
https://bugs.webkit.org/show_bug.cgi?id=20954
Summary
When viewing a gif in a recent nightly, the gif is not animated smoothly and ...
hahn.seb
Reported
2008-09-19 21:36:20 PDT
Using the nightly SVN-
r36685
, when accessing a gif image like
http://img2.abload.de/img/almost_failedovs.gif
This has happened for me on both Intel and PPC, the attached sample is for a PowerBookg G4 PPC computer. This doesn't happen with the regular Safari as of Mac OS X 10.5.5 I wonder whether this might be related to
https://bugs.webkit.org/show_bug.cgi?id=20745
or
https://bugs.webkit.org/show_bug.cgi?id=16177
Attachments
Sample of Webkit taken while only one tab was active with just the gif image loaded
(26.63 KB, text/plain)
2008-09-19 21:37 PDT
,
hahn.seb
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
hahn.seb
Comment 1
2008-09-19 21:37:27 PDT
Created
attachment 23597
[details]
Sample of Webkit taken while only one tab was active with just the gif image loaded
Dave Hyatt
Comment 2
2008-09-19 21:50:37 PDT
Rolled out
r36628
which caused this in
r36702
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug