WebCore/platform/graphics/cairo/ImageCairo.cpp
@@ -43,7 +43,6 @@ void FrameData::clear()
     if (m_frame) {
         cairo_surface_destroy(m_frame);
         m_frame = 0;
-        m_isComplete = false;
         m_duration = 0.;
         m_hasAlpha = true;
     }
