WebCore/platform/graphics/cg/ImageCG.cpp
@@ -52,7 +52,6 @@ void FrameData::clear()
     if (m_frame) {
         CGImageRelease(m_frame);
         m_frame = 0;
-        m_isComplete = false;
         m_duration = 0.0f;
         m_hasAlpha = true;
     }
